# TestTask

./: .gitignore  Makefile  README.md  docker-compose.dev.yml
api/: Dockerfile.dev  pyproject.toml
api/src/api/: admin.py  urls.py  utils.py
api/src/api/controllers/: __init__.py  equipment_controller.py  equipment_type_controller.py
api/src/api/dto/: __init__.py  equipment.py  equipment_type.py
api/src/api/migrations/: 0001_initial.py  0002_alter_equipmentmodel_serial_number_and_more.py  0003_remove_equipmentmodel_equipmentmodel_unique_serial_number.py  0004_alter_equipmentmodel_archived.py
api/src/api/models/: __init__.py  equipment.py  equipment_type.py
api/src/api/repositories/: __init__.py  equipment_repository.py  equipment_type_repository.py
api/src/api/serializers/: __init__.py  equipment_serializer.py  update_equipment_serializer.py
api/src/api/services/: __init__.py  equipment_service.py  equipment_type_service.py
api/src/config/: env.py  settings.py  urls.py
api/src/users/: authentication.py  controllers.py  serializers.py  service.py  urls.py
frontend/: Dockerfile.dev  README.md  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: Auth.js  Config.js  Equipment.js  EquipmentType.js  auth.js  config.js
frontend/src/components/: Navigation.vue
frontend/src/pages/auth/: Login.vue  Registration.vue
frontend/src/pages/create/: Create.vue
frontend/src/pages/edit/: Edit.vue
frontend/src/router/: index.js
frontend/src/store/: AuthStore.js  EditEquipmentStore.js  MaingPageStore.js
nginx/: Dockerfile  nginx.conf
(+4 files in other folders)
